--- a/examples/windows/layouts.html
+++ b/examples/windows/layouts.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Data Binding Example</title>
+    <title>Window Layouts Example</title>
     <link rel="stylesheet" href="//cdn.webix.com/edge/webix.css" type="text/css">
     <script src="//cdn.webix.com/edge/webix.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"></script>
@@ -11,6 +11,10 @@
     <script src="app.js"></script>
 </head>
 <body>
-
+<!-- EXAMPLES -->
+<h1>Windows with Layouts</h1>
+<p>This example shows how Ext containers can be nested in windows to create advanced layouts.</p>
+<div id="app-div"></div>
+<p>Note that the js is not minified so it is readable. See <a href="app.js">app.js</a> for the full source code.</p>
 </body>
 </html>
