Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>ExtWebix by Brainenjii</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>ExtWebix</h1>
-        <p>Organize webix apps like ExtJS</p>
+        <h2>Organize webix apps like ExtJS</h2>
 
-        <p class="view"><a href="https://github.com/Brainenjii/extWebix">View the Project on GitHub <small>Brainenjii/extWebix</small></a></p>
+        <section id="downloads">
+          <a href="https://github.com/Brainenjii/extWebix/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/Brainenjii/extWebix/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/Brainenjii/extWebix" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-        <ul>
-          <li><a href="https://github.com/Brainenjii/extWebix/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Brainenjii/extWebix/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Brainenjii/extWebix">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h1>
 
@@ -36,8 +36,22 @@
 
 <ul>
 <li>Grid binding - <a href="examples/grids/binding.html">Binding</a>
-## Windows</li>
+</li>
+</ul>
+
+<h2>
+<a id="windows" class="anchor" href="#windows" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows</h2>
+
+<ul>
 <li>Window Layouts - <a href="examples/windows/layouts.html">WindowLayouts</a>
+</li>
+</ul>
+
+<h2>
+<a id="mvc" class="anchor" href="#mvc" aria-hidden="true"><span class="octicon octicon-link"></span></a>MVC</h2>
+
+<ul>
+<li>Loading Nested Data Example - <a href="examples/mvc/nested-loading.html">MVC</a>
 </li>
 </ul>
 
@@ -46,12 +60,8 @@
 
 <p>Here will be overview</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Brainenjii">Brainenjii</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
