locking buffer treegrid added

--- a/examples/windows/layouts.html
+++ b/examples/windows/layouts.html
@@ -15,6 +15,6 @@
 <h1>Windows with Layouts</h1>
 <p>This example shows how Ext containers can be nested in windows to create advanced layouts.</p>
 <div id="app-div"></div>
-<p>Note that the js is not minified so it is readable. See <a href="app.js">app.js</a> for the full source code.</p>
+<p>Note that the js is not minified so it is readable. See <a href="app.js">locking-buffer-rendered-treegrid.js</a> for the full source code.</p>
 </body>
 </html>
