Starting work with Ticket app demo

--- a/examples/tree/locking-buffer-rendered-treegrid.html
+++ b/examples/tree/locking-buffer-rendered-treegrid.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Data Binding Example</title>
+  <title>Locking Buffer Rendered TreeGrid Example</title>
   <link rel="stylesheet" href="//cdn.webix.com/edge/webix.css" type="text/css">
   <script src="//cdn.webix.com/edge/webix.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"></script>
@@ -20,6 +20,9 @@
 <p>
   Note that the js is not minified so it is readable. See <a href="locking-buffer-rendered-treegrid.js">locking-buffer-rendered-treegrid.js</a>.
 </p>
+<p><a href="http://dev.sencha.com/ext/5.1.0/examples/tree/locking-buffer-rendered-treegrid.html">
+  ExtJS source:
+</a></p>
 <div id="tree-example"></div>
 </body>
 </html>
