--- a/examples/grid/binding.html
+++ b/examples/grid/binding.html
@@ -8,7 +8,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.js"></script>
     <script src="../../builds/extwebix.js"></script>
-    <script src="app.js"></script>
+    <script src="binding.js"></script>
 </head>
 <body>
 
