Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="grids" class="anchor" href="#grids" aria-hidden="true"><span class="octicon octicon-link"></span></a>Grids</h2>
 
 <ul>
-<li>Grid binding - <a href="examples/grid/binding.html">Binding</a>
+<li>Grid binding - <a href="examples/grids/binding.html">Binding</a>
 </li>
 </ul>
 
@@ -43,7 +43,7 @@
 <a id="windows" class="anchor" href="#windows" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows</h2>
 
 <ul>
-<li>Window Layouts - <a href="examples/window/layouts.html">WindowLayouts</a>
+<li>Window Layouts - <a href="examples/windows/layouts.html">WindowLayouts</a>
 </li>
 </ul>
 
@@ -52,6 +52,14 @@
 
 <ul>
 <li>Loading Nested Data Example - <a href="examples/mvc/nested-loading.html">MVC</a>
+</li>
+</ul>
+
+<h1>
+<a id="combination-examples" class="anchor" href="#combination-examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Combination examples</h1>
+
+<ul>
+<li>Ticket app - <a href="examples/ticket-app/index.html">TicketApp</a>
 </li>
 </ul>
 
