Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="grids" class="anchor" href="#grids" aria-hidden="true"><span class="octicon octicon-link"></span></a>Grids</h2>
 
 <ul>
-<li>Grid binding - <a href="examples/grids/binding.html">Binding</a>
+<li>Grid binding - <a href="examples/grid/binding.html">Binding</a>
 </li>
 </ul>
 
@@ -43,7 +43,15 @@
 <a id="windows" class="anchor" href="#windows" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows</h2>
 
 <ul>
-<li>Window Layouts - <a href="examples/windows/layouts.html">WindowLayouts</a>
+<li>Window Layouts - <a href="examples/window/layout.html">WindowLayouts</a>
+</li>
+</ul>
+
+<h2>
+<a id="trees" class="anchor" href="#trees" aria-hidden="true"><span class="octicon octicon-link"></span></a>Trees</h2>
+
+<ul>
+<li>Locking Buffer Rendered TreeGrid <a href="examples/tree/locking-buffer-rendered-treegrid.html">LockingBufferRenderedTreegrid</a>
 </li>
 </ul>
 
