window layout demo update

--- a/examples/window/layout.html
+++ b/examples/window/layout.html
@@ -8,7 +8,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.js"></script>
     <script src="../../builds/extwebix.js"></script>
-    <script src="app.js"></script>
+    <script src="layout.js"></script>
 </head>
 <body>
 <!-- EXAMPLES -->
@@ -16,5 +16,8 @@
 <p>This example shows how Ext containers can be nested in windows to create advanced layouts.</p>
 <div id="app-div"></div>
 <p>Note that the js is not minified so it is readable. See <a href="layout.js">layout.js</a> for the full source code.</p>
+<p><a href="//dev.sencha.com/ext/5.1.0/examples/window/layout.html">
+  ExtJS source:
+</a></p>
 </body>
 </html>
